[package]
name = "mat4"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["mat4", "matrix", "4x4"]
description = "rust matrix 4x4 functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-mat4.git"
homepage = "https://github.com/nathanfaucett/rs-mat4"

[dependencies]
approx_eq = { git = "https://github.com/nathanfaucett/rs-approx_eq.git" }
num = { git = "https://github.com/nathanfaucett/rs-num.git" }
signed = { git = "https://github.com/nathanfaucett/rs-signed.git" }
vec3 = { git = "https://github.com/nathanfaucett/rs-vec3.git" }
